--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 <ul>
 
 
-
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b>Protecting Privacy of Users in Brain-Computer 
+		Interface Applications &nbsp;&nbsp;</b><br/>
+		with Anisha Agarwal, Martine De Cock, Chin-Teng Lin, Nicholas D. McKinney, Anderson C. A. Nascimento, Dongrui Wu<br/>
+		To appear on IEEE Transactions on Neural Systems &amp; Rehabilitation Engineering<br/>
+	</span><br/>
+</li>
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b>Efficient and Private Scoring of Decision Trees, Support 
