adding pdf and bibtex of IEEENSRE-ADMW+19

--- a/index.html
+++ b/index.html
@@ -57,11 +57,14 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b>Protecting Privacy of Users in Brain-Computer 
-		Interface Applications &nbsp;&nbsp;</b><br/>
+		Interface Applications &nbsp;&nbsp;
+		<a href="./pdf/IEEENSRE-ADMW+19.pdf">PDF</a> &nbsp;&nbsp;
+		<a href="./bibtex/IEEENSRE-ADMW+19.bib">BibTeX</a></b><br/>
 		with Anisha Agarwal, Martine De Cock, Chin-Teng Lin, Nicholas D. McKinney, Anderson C. A. Nascimento, Dongrui Wu<br/>
 		To appear on IEEE Transactions on Neural Systems &amp; Rehabilitation Engineering<br/>
 	</span><br/>
 </li>
+
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b>Efficient and Private Scoring of Decision Trees, Support 
