--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
 <p> I am a postdoctoral researcher in the <a href="https://cyber.biu.ac.il">Center for Research in 
 Applied Cryptography and Cyber Security</a> at the Bar-Ilan University. My research interests lie 
-in cryptography and its many intersections with other fields such as information theory, 
-machine learning and privacy.</p>
+in cryptography and its many intersections with other fields such as machine learning, information theory and privacy.</p>
 
 
 
@@ -61,7 +60,7 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 		<a href="./pdf/IEEENSRE-ADMW+19.pdf">PDF</a> &nbsp;&nbsp;
 		<a href="./bibtex/IEEENSRE-ADMW+19.bib">BibTeX</a></b><br/>
 		with Anisha Agarwal, Martine De Cock, Chin-Teng Lin, Nicholas D. McKinney, Anderson C. A. Nascimento, Dongrui Wu<br/>
-		To appear on IEEE Transactions on Neural Systems &amp; Rehabilitation Engineering<br/>
+		To appear on IEEE Transactions on Neural Systems and Rehabilitation Engineering<br/>
 	</span><br/>
 </li>
 
