--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <p> I am a postdoctoral researcher in the <a href="https://cyber.biu.ac.il">Center for Research in 
 Applied Cryptography and Cyber Security</a> at the Bar-Ilan University. My research interests lie 
-in cryptography and its many intersections with other fields such as machine learning, information theory and privacy.</p>
+in cryptography and its many intersections with fields such as machine learning, information theory and privacy.</p>
 
 
 
