--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		Applied Cryptography and Cyber Security</a><br>
 		Building 206, 5th floor<br>
 		Bar-Ilan University 5290002<br>
-		Ramat-Gan<br>
+		Ramat Gan<br>
 		Israel<br> 
 		<br>
 		E-mail: rafael (at) dowsley (dot) net <br>
@@ -26,7 +26,7 @@
 
 <p> I am a postdoctoral researcher in the <a href="https://cyber.biu.ac.il">Center for Research in 
 Applied Cryptography and Cyber Security</a> at the Bar-Ilan University. My research interests lie 
-in cryptography and its many intersections with fields such as machine learning, information theory and privacy.</p>
+in cryptography and its many intersections with machine learning, information theory and privacy.</p>
 
 
 
@@ -79,7 +79,7 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b>On The Impossibility of Structure-Preserving 
     	Deterministic Primitives&nbsp;&nbsp;
-		<a href="https://link.springer.com/article/10.1007/s00145-018-9292-1">PDF</a> &nbsp;&nbsp;
+		<a href="./pdf/JC-ACDD19.pdf">PDF</a> &nbsp;&nbsp;
 		<a href="./bibtex/JC-ACDD19.bib">BibTeX</a></b><br/>
 		with Masayuki Abe, Jan Camenisch, Maria Dubovitskaya<br/>
 		Journal of Cryptology, 2019<br/> 
@@ -97,7 +97,7 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b>Privacy-preserving scoring of tree ensembles: A novel framework 
 		for AI in healthcare&nbsp;&nbsp;
-		<a href="http://faculty.washington.edu/mdecock/papers/kfritchman2018a.pdf">PDF</a> &nbsp;&nbsp;
+		<a href="./pdf/BD-FSDHCNT18.pdf">PDF</a> &nbsp;&nbsp;
 		<a href="./bibtex/BD-FSDHCNT18.bib">BibTeX</a></b><br/>
 		with Martine De Cock, Kyle Fritchman, Tyler Hughes, Anderson C. A. Nascimento, 
 		Keerthanaa Saminathan, Ankur Teredesai<br/>
@@ -136,7 +136,7 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b>MARS: Monetized Ad-hoc Routing System &nbsp;&nbsp; 
-		<a href="https://dl.acm.org/ft_gateway.cfm?id=3211948&type=pdf">PDF</a> &nbsp;&nbsp;
+		<a href="./pdf/CRYBLOCK-DavDowLar18.pdf">PDF</a> &nbsp;&nbsp;
 		<a href="./bibtex/CRYBLOCK-DavDowLar18.bib">BibTeX</a></b><br/>
 		with Bernardo David, Mario Larangeira<br/>
 		CRYBLOCK@Mobisys 2018 <br/> 
@@ -156,7 +156,7 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b>A Survey on Design and Implementation of Protected 
 	Searchable Data in the Cloud &nbsp;&nbsp;
-	<a href="https://www.sciencedirect.com/science/article/pii/S1574013716302167">PDF</a> &nbsp;&nbsp; 
+	<a href="./pdf/CSR-DMNP17.pdf">PDF</a> &nbsp;&nbsp; 
 	<a href="./bibtex/CSR-DMNP17.bib">BibTeX</a></b><br/>
 		with Antonis Michalas, Matthias Nagel and Nicolae Paladi<br/>
 		Computer Science Review, 2017<br/>
@@ -166,7 +166,8 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b>Unconditionally Secure, Universally Composable Privacy 
-    	Preserving Linear Algebra &nbsp;&nbsp; <a href="http://ieeexplore.ieee.org/xpl/login.jsp?tp=&arnumber=7239604&url=http%3A%2F%2Fieeexplore.ieee.org%2Fiel7%2F10206%2F7313073%2F07239604.pdf%3Farnumber%3D7239604">PDF</a> &nbsp;&nbsp;
+    	Preserving Linear Algebra &nbsp;&nbsp; 
+    	<a href="./pdf/IEEEIFS-DDGM+16.pdf">PDF</a> &nbsp;&nbsp;
 		<a href="./bibtex/IEEEIFS-DDGM+16.bib">BibTeX</a></b><br/>
 		with Bernardo David, Jeroen van de Graaf, Davidson Marques, Anderson C. A. Nascimento, Adriana C.B. Pinto<br/>
 		IEEE Transactions on Information Forensics and Security, 2016<br/>
@@ -175,7 +176,7 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b>A Database Adapter for Secure Outsourcing &nbsp;&nbsp; 
-		<a href="http://ieeexplore.ieee.org/iel7/7823365/7830561/07830729.pdf">PDF</a>&nbsp;&nbsp; 
+		<a href="./pdf/CLOUDCOM-DGYZ16.pdf">PDF</a>&nbsp;&nbsp; 
 		<a href="./bibtex/CLOUDCOM-DGYZ16.bib">BibTeX</a></b><br/>
 		with Matthias Gabel, Kateryna Yurchenko, Valentin Zipf<br/>
 		CloudSPD@CloudCom 2016<br/> 
@@ -184,7 +185,7 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b>A Distributed Key Management Approach &nbsp;&nbsp; 
-		<a href="http://ieeexplore.ieee.org/iel7/7823365/7830561/07830730.pdf">PDF</a>&nbsp;&nbsp; 
+		<a href="./pdf/CLOUDCOM-DGHSS16.pdf">PDF</a>&nbsp;&nbsp; 
 		<a href="./bibtex/CLOUDCOM-DGHSS16.bib">BibTeX</a></b><br/>
 		with Matthias Gabel, Gerald H&uuml;bsch, Gunther Schiefer, Antonia Schwichtenberg<br/>
 		CloudSPD@CloudCom 2016<br/> 
@@ -193,7 +194,8 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b>Fast, Privacy Preserving Linear Regression over Distributed Datasets 
-		Based on Pre-Distributed Data &nbsp;&nbsp; <a href=" http://dl.acm.org/citation.cfm?id=2808774&CFID=579386430&CFTOKEN=39695024">PDF</a>&nbsp;&nbsp;
+		Based on Pre-Distributed Data &nbsp;&nbsp; 
+		<a href="./pdf/AISEC-CDNN15.pdf">PDF</a>&nbsp;&nbsp;
 		<a href="./bibtex/AISEC-CDNN15.bib">BibTeX</a></b><br/>
 		with Martine de Cock, Anderson C. A. Nascimento, Stacey C. Newman<br/>
 		AISec@CCS 2015<br/> 
@@ -202,7 +204,8 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b>Efficient Unconditionally Secure Comparison and Privacy Preserving 
-		Machine Learning Classification Protocols &nbsp;&nbsp; <a href="http://link.springer.com/chapter/10.1007%2F978-3-319-26059-4_20">PDF</a>&nbsp;&nbsp; 
+		Machine Learning Classification Protocols &nbsp;&nbsp; 
+		<a href="./pdf/PROVSEC-DDKN15.pdf">PDF</a>&nbsp;&nbsp; 
 		<a href="./bibtex/PROVSEC-DDKN15.bib">BibTeX</a></b><br/>
 		with Bernardo David, Raj Katti, Anderson C. A. Nascimento<br/>
 		ProvSec 2015<br/> 
@@ -220,7 +223,7 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b>Digital Signatures from Strong RSA without Prime Generation &nbsp;&nbsp; 
-    	<a href=" http://link.springer.com/chapter/10.1007%2F978-3-662-46447-2_10">PDF</a>&nbsp;&nbsp; 
+    	<a href="./pdf/PKC-CasDowKil15.pdf">PDF</a>&nbsp;&nbsp; 
     	<a href="./bibtex/PKC-CasDowKil15.bib">BibTeX</a></b><br/>
 		with David Cash, Eike Kiltz<br/>
 		PKC 2015<br/> 
@@ -229,7 +232,7 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b>Information-Theoretically Secure Oblivious Polynomial Evaluation in the Commodity-Based Model &nbsp;&nbsp; 
-		<a href="http://dx.doi.org/10.1007/s10207-014-0247-8">PDF</a> &nbsp;&nbsp;
+		<a href="./pdf/IJIS-TNDMIHO15.pdf">PDF</a> &nbsp;&nbsp;
 		<a href="./bibtex/IJIS-TNDMIHO15.bib">BibTeX</a></b><br/>
 		with Goichiro Hanaoka, Hideki Imai, J&ouml;rn M&uuml;ller-Quade, Anderson C. A. Nascimento, Akira Otsuka, Rafael Tonicelli<br/>
 		International Journal of Information Security, 2015<br/>
@@ -239,7 +242,7 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b>Public-Key Encryption Schemes with Bounded CCA Security 
     	and Optimal Ciphertext Length Based on the CDH and HDH Assumptions &nbsp;&nbsp; 
-    	<a href=" http://comjnl.oxfordjournals.org/content/58/10/2738">PDF</a>&nbsp;&nbsp;
+    	<a href="./pdf/TCJ-PDNH15.pdf">PDF</a>&nbsp;&nbsp;
 		<a href="./bibtex/TCJ-PDNH15.bib">BibTeX</a></b><br/>
 		with Goichiro Hanaoka, Anderson C. A. Nascimento, Mayana Pereira <br/>
 		The Computer Journal, 2015<br/> 
@@ -248,7 +251,8 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b>Weakening the Isolation Assumption of Tamper-Proof 
-    	Hardware Tokens &nbsp;&nbsp; <a href="https://eprint.iacr.org/2015/104.pdf">PDF</a>&nbsp;&nbsp; 
+    	Hardware Tokens &nbsp;&nbsp; 
+    	<a href="https://eprint.iacr.org/2015/104.pdf">PDF</a>&nbsp;&nbsp; 
     	<a href="./bibtex/ICITS-DowMulNil15.bib">BibTeX</a></b><br/>
 		with J&ouml;rn M&uuml;ller-Quade, Tobias Nilges<br/>
 		ICITS 2015<br/> 
@@ -257,7 +261,7 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b>Towards Trusted eHealth Services in the Cloud &nbsp;&nbsp; 
-		<a href="http://www.computer.org/csdl/proceedings/ucc/2015/5697/00/5697a618-abs.html">PDF</a>&nbsp;&nbsp; 
+		<a href="./pdf/UCC-MicDow15.pdf">PDF</a>&nbsp;&nbsp; 
 		<a href="./bibtex/UCC-MicDow15.bib">BibTeX</a></b><br/>
 		with Antonis Michalas<br/>
 		CloudSPD@UCC 2015<br/> 
@@ -266,7 +270,8 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b>Universally Composable Oblivious Transfer Based 
-    	on a Variant of LPN &nbsp;&nbsp; <a href="http://dx.doi.org/10.1007/978-3-319-12280-9_10">PDF</a>&nbsp;&nbsp;
+    	on a Variant of LPN &nbsp;&nbsp; 
+    	<a href="./pdf/CANS-DavDowNas14.pdf">PDF</a>&nbsp;&nbsp;
 		<a href="./bibtex/CANS-DavDowNas14.bib">BibTeX</a></b><br/>
 		with Bernardo David, Anderson C. A. Nascimento<br/>
 		CANS 2014<br/> 
@@ -275,7 +280,7 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b>Oblivious Transfer in the Bounded Storage Model with Errors &nbsp;&nbsp; 
-		<a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=6875108">PDF</a> &nbsp;&nbsp;
+		<a href="./pdf/ISIT-DowLacNas14.pdf">PDF</a> &nbsp;&nbsp;
 		<a href="./bibtex/ISIT-DowLacNas14.bib">BibTeX</a></b><br/>
 		with Felipe Lacerda, Anderson C. A. Nascimento<br/>
 		ISIT 2014<br/> 
@@ -284,7 +289,8 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b>On The Impossibility of Structure-Preserving 
-    	Deterministic Primitives &nbsp;&nbsp; <a href="http://dx.doi.org/10.1007/978-3-642-54242-8_30">PDF</a> &nbsp;&nbsp; 
+    	Deterministic Primitives &nbsp;&nbsp; 
+    	<a href="./pdf/TCC-ACDD14.pdf">PDF</a> &nbsp;&nbsp; 
 		<a href="./bibtex/TCC-ACDD14.bib">BibTeX</a></b><br/>
 		with Masayuki Abe, Jan Camenisch, Maria Dubovitskaya<br/>
 		TCC 2014<br/> 
@@ -338,7 +344,7 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b> Do You Know Where Your Cloud Files Are? &nbsp;&nbsp; 
-		<a href="http://dl.acm.org/citation.cfm?id=2046677">PDF</a>&nbsp;&nbsp; 
+		<a href="./pdf/CCSW-BenDowSha11.pdf">PDF</a>&nbsp;&nbsp; 
 		<a href="./bibtex/CCSW-BenDowSha11.bib">BibTeX</a></b></br>
 		with Karyn Benson, Hovav Shacham<br/>
 		CCSW 2011<br/>
@@ -358,7 +364,7 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b>Public Key Encryption Schemes with Bounded CCA 
     	Security and Optimal Ciphertext Length Based on the CDH Assumption &nbsp;&nbsp; 
-    	<a href="http://dx.doi.org/10.1007/978-3-642-18178-8_26">PDF</a>&nbsp;&nbsp;
+    	<a href="./pdf/ISC-PDHN10.pdf">PDF</a>&nbsp;&nbsp;
 		<a href="./bibtex/ISC-PDHN10.bib">BibTeX</a></b><br/>
 		with Goichiro Hanaoka, Anderson C. A. Nascimento, Mayana Pereira<br/>
 		ISC 2010<br/>
@@ -367,7 +373,7 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b>Round-Optimal Deniable Ring Authentication in the Presence of Big Brother &nbsp;&nbsp; 
-		<a href="http://dx.doi.org/10.1007/978-3-642-17955-6_23">PDF</a> &nbsp;&nbsp;
+		<a href="./pdf/WISA-DHIN10.pdf">PDF</a> &nbsp;&nbsp;
 		<a href="./bibtex/WISA-DHIN10.bib">BibTeX</a></b><br/>
 		with Goichiro Hanaoka, Hideki Imai, Anderson C. A. Nascimento<br/>
 		WISA 2010<br/>
@@ -394,7 +400,7 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b>A CCA2 Secure Public Key Encryption Scheme Based on the McEliece Assumptions in the Standard Model &nbsp;&nbsp; 
-		<a href="http://dx.doi.org/10.1007/978-3-642-00862-7_16">PDF</a>&nbsp;&nbsp; 
+		<a href="./pdf/RSA-DowMulNas09.pdf">PDF</a>&nbsp;&nbsp; 
 		<a href="./bibtex/RSA-DowMulNas09.bib">BibTeX</a></b><br/>
 		with J&ouml;rn M&uuml;ller-Quade, Anderson C. A. Nascimento<br/>
 		CT-RSA 2009<br/>
@@ -403,6 +409,7 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b>On the Possibility of Universally Composable Commitments Based on Noisy Channels &nbsp;&nbsp; 
+		<a href="./pdf/SBSEG-DMN08.pdf">PDF</a>&nbsp;&nbsp; 
 		<a href="./bibtex/SBSEG-DMN08.bib">BibTeX</a></b><br/>
 		with J&ouml;rn M&uuml;ller-Quade, Anderson C. A. Nascimento<br/>
 		SBSEG 2008<br/>
@@ -411,7 +418,7 @@ a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at 
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b>Oblivious Transfer Based on the McEliece Assumptions &nbsp;&nbsp; 
-		<a href="http://dx.doi.org/10.1007/978-3-540-85093-9_11">PDF</a>&nbsp;&nbsp; 
+		<a href="./pdf/ICITS-DGMN08.pdf">PDF</a>&nbsp;&nbsp; 
 		<a href="./bibtex/ICITS-DGMN08.bib">BibTeX</a></b><br/>
 		with Jeroen van de Graaf, J&ouml;rn M&uuml;ller-Quade, Anderson C. A. Nascimento<br/>
 		ICITS 2008<br/>
