--- a/index.html
+++ b/index.html
@@ -31,18 +31,16 @@ in cryptography and its many intersections with machine learning, information th
 
 
 <p> Previously I was a postdoctoral researcher in the <a href="http://users-cs.au.dk/orlandi/cryptogroup/">Cryptography 
-and Security Research Group</a> at the <a href="http://www.au.dk/en/">Aarhus University</a>. I got my Doctoral degree in the <a href="http://www.iti.kit.edu">Institute of Theoretical Informatics</a> 
-at the <a href="http://www.kit.edu/">Karlsruhe Institute of Technology</a> where I worked in 
+and Security Research Group</a> at the Aarhus University. I got my Doctoral degree 
+from the Karlsruhe Institute of Technology where I worked in 
 the <a href="http://crypto.iti.kit.edu">Cryptography and Security Working Group</a> under 
 <a href="http://crypto.iti.kit.edu/index.php?id=mueller-quade&L=0">Professor J&ouml;rn M&uuml;ller-Quade</a>. 
 My thesis is available <a href="./pdf/thesis.pdf">here.</a> 
-Before that, I obtained a Bachelor's degree in <a href="http://www.redes.unb.br/">Communication Networks 
-Engineering</a> and a Master's degree in <a href="http://www.ene.unb.br/">Electrical Engineering</a> 
-from the <a href="http://www.unb.br/">University of Bras&iacute;lia (UnB)</a>, Brazil. My advisor was 
+Before that, I obtained a Bachelor's degree in Communication Networks 
+Engineering and a Master's degree in Electrical Engineering from the University of Bras&iacute;lia (UnB), Brazil, where my advisor was 
 <a href="http://www.anderson-nascimento.org"> Professor Anderson C. A. Nascimento</a>. I also obtained 
-a Master's degree in <a href="http://www-cse.ucsd.edu/">Computer Science</a> at the 
-<a href="http://www.ucsd.edu/">University of California at San Diego</a> working with 
-<a href="https://cseweb.ucsd.edu/~mihir/">Professor Mihir Bellare</a>.
+a Master's degree in Computer Science from the University of California at San Diego, where I worked 
+with <a href="https://cseweb.ucsd.edu/~mihir/">Professor Mihir Bellare</a>.
 </p>
 
 <div style="height:1px;font-size:1px;">&nbsp;</div>
