--- a/index.html
+++ b/index.html
@@ -26,21 +26,13 @@
 
 <p> I am a postdoctoral researcher in the <a href="https://cyber.biu.ac.il">Center for Research in 
 Applied Cryptography and Cyber Security</a> at the Bar-Ilan University. My research interests lie 
-in cryptography and its many intersections with machine learning, information theory and privacy.</p>
-
-
-
-<p> Previously I was a postdoctoral researcher in the <a href="http://users-cs.au.dk/orlandi/cryptogroup/">Cryptography 
+in cryptography and its many intersections with machine learning, information theory and privacy.
+Previously I was a postdoctoral researcher in the <a href="http://users-cs.au.dk/orlandi/cryptogroup/">Cryptography 
 and Security Research Group</a> at the Aarhus University. I got my Doctoral degree 
 from the Karlsruhe Institute of Technology where I worked in 
 the <a href="http://crypto.iti.kit.edu">Cryptography and Security Working Group</a> under 
 <a href="http://crypto.iti.kit.edu/index.php?id=mueller-quade&L=0">Professor J&ouml;rn M&uuml;ller-Quade</a>. 
 My thesis is available <a href="./pdf/thesis.pdf">here.</a> 
-Before that, I obtained a Bachelor's degree in Communication Networks 
-Engineering and a Master's degree in Electrical Engineering from the University of Bras&iacute;lia (UnB), Brazil, where my advisor was 
-<a href="http://www.anderson-nascimento.org"> Professor Anderson C. A. Nascimento</a>. I also obtained 
-a Master's degree in Computer Science from the University of California at San Diego, where I worked 
-with <a href="https://cseweb.ucsd.edu/~mihir/">Professor Mihir Bellare</a>.
 </p>
 
 <div style="height:1px;font-size:1px;">&nbsp;</div>
