--- a/index.html
+++ b/index.html
@@ -9,31 +9,25 @@
 
 <div id="box1">
 	    <div id="box2">
-		<img class="imgright" src="01.jpg" width= 144 px height= 200 px>
+		<img class="imgright" src="01.jpg" width= 150 px height= 210 px>
 		<h1>Rafael Dowsley</h1>
-		<br>
-		<a href="https://cyber.biu.ac.il">Center for Research in 
-		Applied Cryptography and Cyber Security</a><br>
-		Building 206, 5th floor<br>
-		Bar-Ilan University 5290002<br>
-		Ramat Gan<br>
-		Israel<br> 
-		<br>
-		E-mail: rafael (at) dowsley (dot) net <br>
-<br/><br/><br/><br/> 
+		<br/>
+		E-mail: rafael (at) dowsley (dot) net <br/><br/>
+		
+		<h2> About me </h2>
+		
+		I am a postdoctoral researcher in the <a href="https://cyber.biu.ac.il">Center for Research in 
+		Applied Cryptography and Cyber Security</a> at the Bar-Ilan University. My research interests lie 
+		in cryptography and its many intersections with machine learning, information theory and privacy.
+		Previously I was a postdoctoral researcher in the <a href="http://users-cs.au.dk/orlandi/cryptogroup/">Cryptography 
+		and Security Research Group</a> at the Aarhus University and got my doctoral degree 
+		from the Karlsruhe Institute of Technology, where I worked in 
+		the <a href="http://crypto.iti.kit.edu">Cryptography and Security Working Group</a> under 
+		<a href="http://crypto.iti.kit.edu/index.php?id=mueller-quade&L=0">Professor J&ouml;rn M&uuml;ller-Quade</a>. 
+		My thesis is available <a href="./pdf/thesis.pdf">here.</a> 
+		
+<br/><br/>
    
-<h2> About me </h2>
-
-<p> I am a postdoctoral researcher in the <a href="https://cyber.biu.ac.il">Center for Research in 
-Applied Cryptography and Cyber Security</a> at the Bar-Ilan University. My research interests lie 
-in cryptography and its many intersections with machine learning, information theory and privacy.
-Previously I was a postdoctoral researcher in the <a href="http://users-cs.au.dk/orlandi/cryptogroup/">Cryptography 
-and Security Research Group</a> at the Aarhus University. I got my Doctoral degree 
-from the Karlsruhe Institute of Technology where I worked in 
-the <a href="http://crypto.iti.kit.edu">Cryptography and Security Working Group</a> under 
-<a href="http://crypto.iti.kit.edu/index.php?id=mueller-quade&L=0">Professor J&ouml;rn M&uuml;ller-Quade</a>. 
-My thesis is available <a href="./pdf/thesis.pdf">here.</a> 
-</p>
 
 <div style="height:1px;font-size:1px;">&nbsp;</div>
 <h2><a href="http://scholar.google.com/citations?user=6NdIS2AAAAAJ&hl=en" target="_blank">Google Scholar</a></h2>
