removing links to bibtexs

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/IEEENSRE-ADMW+19.pdf">Protecting Privacy of Users in Brain-Computer 
-		Interface Applications</a> &nbsp;&nbsp;
-		<a href="./bibtex/IEEENSRE-ADMW+19.bib">BibTeX</a></b><br/>
+		Interface Applications</a></b><br/>
 		with Anisha Agarwal, Martine De Cock, Chin-Teng Lin, Nicholas D. McKinney, Anderson C. A. Nascimento, Dongrui Wu<br/>
 		To appear on IEEE Transactions on Neural Systems and Rehabilitation Engineering<br/>
 	</span><br/>
@@ -50,8 +49,7 @@
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2016/736.pdf">Efficient and Private Scoring of Decision Trees, Support 
-		Vector Machines and Logistic Regression Models based on Pre-Computation</a>&nbsp;&nbsp;
-		<a href="./bibtex/IEEEDSC-CDHK+19.bib">BibTeX</a></b><br/>
+		Vector Machines and Logistic Regression Models based on Pre-Computation</a></b><br/>
 		with Martine De Cock, Caleb Horst, Raj Katti, Anderson C. A. Nascimento, Wing-Sea Poon, Stacey Truex<br/>
 		IEEE Transactions on Dependable and Secure Computing, 2019<br/>
 	</span><br/>
@@ -60,8 +58,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/JC-ACDD19.pdf">On The Impossibility of Structure-Preserving 
-    	Deterministic Primitives</a>&nbsp;&nbsp;
-		<a href="./bibtex/JC-ACDD19.bib">BibTeX</a></b><br/>
+    	Deterministic Primitives</a></b><br/>
 		with Masayuki Abe, Jan Camenisch, Maria Dubovitskaya<br/>
 		Journal of Cryptology, 2019<br/> 
 	</span><br/>   
@@ -69,7 +66,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2018/157.pdf">ROYALE: A Framework for Universally 
-    	Composable Card Games with Financial Rewards and Penalties Enforcement  </a></b><br/>
+    	Composable Card Games with Financial Rewards and Penalties Enforcement</a></b><br/>
 		with Bernardo David, Mario Larangeira<br/>
 		Financial Cryptography and Data Security (FC) 2019<br/> 
 	</span><br/>   
@@ -77,8 +74,7 @@
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/BD-FSDHCNT18.pdf">Privacy-preserving scoring of tree ensembles: A novel framework 
-		for AI in healthcare</a> &nbsp;&nbsp;
-		<a href="./bibtex/BD-FSDHCNT18.bib">BibTeX</a></b><br/>
+		for AI in healthcare</a></b><br/>
 		with Martine De Cock, Kyle Fritchman, Tyler Hughes, Anderson C. A. Nascimento, 
 		Keerthanaa Saminathan, Ankur Teredesai<br/>
 		Special Session on HealthCare Data@Big Data 2018<br/>
@@ -87,8 +83,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2015/952.pdf">Commitment and Oblivious 
-    	Transfer in the Bounded Storage Model with Errors</a> &nbsp;&nbsp;
-		<a href="./bibtex/IEEEIT-DowLacNas18.bib">BibTeX</a></b><br/>
+    	Transfer in the Bounded Storage Model with Errors</a></b><br/>
 		with Felipe Lacerda, Anderson C. A. Nascimento<br/>
 		IEEE Transactions on Information Theory, 2018 <br/> 
 	</span><br/>   
@@ -104,16 +99,14 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2018/303.pdf">21 - Bringing 
-    	Down the Complexity: Fast Composable Protocols for Card Games Without Secret State</a> &nbsp;&nbsp;
-		<a href="./bibtex/ACISP-DavDowLar18.bib">BibTeX</a></b><br/>
+    	Down the Complexity: Fast Composable Protocols for Card Games Without Secret State</a></b><br/>
 		with Bernardo David, Mario Larangeira<br/>
 		ACISP 2018 <br/> 
 	</span><br/>   
 </li>
 
 <li>
-    <span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/CRYBLOCK-DavDowLar18.pdf">MARS: Monetized Ad-hoc Routing System</a> &nbsp;&nbsp;
-		<a href="./bibtex/CRYBLOCK-DavDowLar18.bib">BibTeX</a></b><br/>
+    <span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/CRYBLOCK-DavDowLar18.pdf">MARS: Monetized Ad-hoc Routing System</a></b><br/>
 		with Bernardo David, Mario Larangeira<br/>
 		CRYBLOCK@Mobisys 2018 <br/> 
 	</span><br/>   
@@ -121,8 +114,7 @@
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2014/823.pdf">On the Oblivious Transfer Capacity of Generalized 
-	Erasure Channels against Malicious Adversaries: The Case of Low Erasure Probability</a> &nbsp;&nbsp;
-		<a href="./bibtex/IEEEIT-DowNas17.bib">BibTeX</a></b><br/>
+	Erasure Channels against Malicious Adversaries: The Case of Low Erasure Probability</a></b><br/>
 		with Anderson C. A. Nascimento<br/>
 		IEEE Transactions on Information Theory, 2017<br/>
 	</span><br/>
@@ -130,8 +122,7 @@
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/CSR-DMNP17.pdf">A Survey on Design and Implementation of Protected 
-	Searchable Data in the Cloud</a> &nbsp;&nbsp; 
-	<a href="./bibtex/CSR-DMNP17.bib">BibTeX</a></b><br/>
+	Searchable Data in the Cloud</a></b><br/>
 		with Antonis Michalas, Matthias Nagel and Nicolae Paladi<br/>
 		Computer Science Review, 2017<br/>
 	</span><br/>
@@ -140,8 +131,7 @@
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/IEEEIFS-DDGM+16.pdf">Unconditionally Secure, 
-		Universally Composable Privacy Preserving Linear Algebra</a> &nbsp;&nbsp;
-		<a href="./bibtex/IEEEIFS-DDGM+16.bib">BibTeX</a></b><br/>
+		Universally Composable Privacy Preserving Linear Algebra</a></b><br/>
 		with Bernardo David, Jeroen van de Graaf, Davidson Marques, Anderson C. A. Nascimento, Adriana C.B. Pinto<br/>
 		IEEE Transactions on Information Forensics and Security, 2016<br/>
 	</span><br/>
@@ -149,8 +139,7 @@
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/CLOUDCOM-DGYZ16.pdf">A Database Adapter 
-		for Secure Outsourcing</a>&nbsp;&nbsp; 
-		<a href="./bibtex/CLOUDCOM-DGYZ16.bib">BibTeX</a></b><br/>
+		for Secure Outsourcing</a></b><br/>
 		with Matthias Gabel, Kateryna Yurchenko, Valentin Zipf<br/>
 		CloudSPD@CloudCom 2016<br/> 
 	</span><br/>   
@@ -158,8 +147,7 @@
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/CLOUDCOM-DGHSS16.pdf">A Distributed Key 
-		Management Approach</a>&nbsp;&nbsp; 
-		<a href="./bibtex/CLOUDCOM-DGHSS16.bib">BibTeX</a></b><br/>
+		Management Approach</a></b><br/>
 		with Matthias Gabel, Gerald H&uuml;bsch, Gunther Schiefer, Antonia Schwichtenberg<br/>
 		CloudSPD@CloudCom 2016<br/> 
 	</span><br/>   
@@ -167,8 +155,7 @@
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/AISEC-CDNN15.pdf">Fast, Privacy Preserving Linear Regression over Distributed Datasets 
-		Based on Pre-Distributed Data</a>&nbsp;&nbsp;
-		<a href="./bibtex/AISEC-CDNN15.bib">BibTeX</a></b><br/>
+		Based on Pre-Distributed Data</a></b><br/>
 		with Martine de Cock, Anderson C. A. Nascimento, Stacey C. Newman<br/>
 		AISec@CCS 2015<br/> 
 	</span><br/>      
@@ -176,8 +163,7 @@
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/PROVSEC-DDKN15.pdf">Efficient Unconditionally Secure Comparison and Privacy Preserving 
-		Machine Learning Classification Protocols</a>&nbsp;&nbsp; 
-		<a href="./bibtex/PROVSEC-DDKN15.bib">BibTeX</a></b><br/>
+		Machine Learning Classification Protocols</a></b><br/>
 		with Bernardo David, Raj Katti, Anderson C. A. Nascimento<br/>
 		ProvSec 2015<br/> 
 	</span><br/>      
@@ -185,8 +171,7 @@
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2014/376.pdf">How Secure 
-		is Deterministic Encryption?</a>&nbsp;&nbsp; 
-		<a href="./bibtex/PKC-BelDowKee15.bib">BibTeX</a></b><br/>
+		is Deterministic Encryption?</a></b><br/>
 		with Mihir Bellare, Sriram Keelveedhi<br/>
 		PKC 2015<br/> 
 	</span><br/>
@@ -194,8 +179,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/PKC-CasDowKil15.pdf">Digital Signatures 
-    	from Strong RSA without Prime Generation</a>&nbsp;&nbsp; 
-    	<a href="./bibtex/PKC-CasDowKil15.bib">BibTeX</a></b><br/>
+    	from Strong RSA without Prime Generation</a></b><br/>
 		with David Cash, Eike Kiltz<br/>
 		PKC 2015<br/> 
 	</span><br/>      
@@ -203,8 +187,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/IJIS-TNDMIHO15.pdf">Information-Theoretically 
-    	Secure Oblivious Polynomial Evaluation in the Commodity-Based Model</a> &nbsp;&nbsp;
-		<a href="./bibtex/IJIS-TNDMIHO15.bib">BibTeX</a></b><br/>
+    	Secure Oblivious Polynomial Evaluation in the Commodity-Based Model</a></b><br/>
 		with Goichiro Hanaoka, Hideki Imai, J&ouml;rn M&uuml;ller-Quade, Anderson C. A. Nascimento, Akira Otsuka, Rafael Tonicelli<br/>
 		International Journal of Information Security, 2015<br/>
 	</span><br/>
@@ -212,8 +195,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/TCJ-PDNH15.pdf">Public-Key Encryption Schemes with Bounded CCA Security 
-    	and Optimal Ciphertext Length Based on the CDH and HDH Assumptions</a>&nbsp;&nbsp;
-		<a href="./bibtex/TCJ-PDNH15.bib">BibTeX</a></b><br/>
+    	and Optimal Ciphertext Length Based on the CDH and HDH Assumptions</a></b><br/>
 		with Goichiro Hanaoka, Anderson C. A. Nascimento, Mayana Pereira <br/>
 		The Computer Journal, 2015<br/> 
 	</span><br/>   
@@ -221,8 +203,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2015/104.pdf">Weakening the Isolation 
-    	Assumption of Tamper-Proof Hardware Tokens</a>&nbsp;&nbsp; 
-    	<a href="./bibtex/ICITS-DowMulNil15.bib">BibTeX</a></b><br/>
+    	Assumption of Tamper-Proof Hardware Tokens</a></b><br/>
 		with J&ouml;rn M&uuml;ller-Quade, Tobias Nilges<br/>
 		ICITS 2015<br/> 
 	</span><br/>   
@@ -230,8 +211,7 @@
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/UCC-MicDow15.pdf">Towards Trusted eHealth 
-		Services in the Cloud</a>&nbsp;&nbsp; 
-		<a href="./bibtex/UCC-MicDow15.bib">BibTeX</a></b><br/>
+		Services in the Cloud</a></b><br/>
 		with Antonis Michalas<br/>
 		CloudSPD@UCC 2015<br/> 
 	</span><br/>   
@@ -239,8 +219,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/CANS-DavDowNas14.pdf">Universally Composable 
-    	Oblivious Transfer Based on a Variant of LPN</a>&nbsp;&nbsp;
-		<a href="./bibtex/CANS-DavDowNas14.bib">BibTeX</a></b><br/>
+    	Oblivious Transfer Based on a Variant of LPN</a></b><br/>
 		with Bernardo David, Anderson C. A. Nascimento<br/>
 		CANS 2014<br/> 
 	</span><br/>   
@@ -248,8 +227,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/ISIT-DowLacNas14.pdf">Oblivious Transfer in the 
-    	Bounded Storage Model with Errors</a> &nbsp;&nbsp;
-		<a href="./bibtex/ISIT-DowLacNas14.bib">BibTeX</a></b><br/>
+    	Bounded Storage Model with Errors</a></b><br/>
 		with Felipe Lacerda, Anderson C. A. Nascimento<br/>
 		ISIT 2014<br/> 
 	</span><br/>   
@@ -257,8 +235,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/TCC-ACDD14.pdf">On The Impossibility of Structure-Preserving 
-    	Deterministic Primitives</a> &nbsp;&nbsp; 
-		<a href="./bibtex/TCC-ACDD14.bib">BibTeX</a></b><br/>
+    	Deterministic Primitives</a></b><br/>
 		with Masayuki Abe, Jan Camenisch, Maria Dubovitskaya<br/>
 		TCC 2014<br/> 
 	</span><br/>   
@@ -266,8 +243,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="http://eprint.iacr.org/2008/457.pdf"> On the Composability of 
-    	Statistically Secure Bit Commitments</a> &nbsp;&nbsp; 
-		<a href="./bibtex/JIT-DGMN13.bib">BibTeX</a></b><br/>
+    	Statistically Secure Bit Commitments</a></b><br/>
 		with Jeroen van de Graaf, J&ouml;rn M&uuml;ller-Quade, Anderson C. A. Nascimento<br/>
 		Journal of Internet Technology, 2013<br/> 
 	</span><br/>   
@@ -275,8 +251,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="http://eprint.iacr.org/2008/468.pdf">A CCA2 Secure Variant of the 
-    	McEliece Cryptosystem</a> &nbsp;&nbsp; 
-		<a href="./bibtex/IEEEIT-DDMN12.bib">BibTeX</a> </b><br/>
+    	McEliece Cryptosystem</a></b><br/>
 		with Nico D&ouml;ttling, J&ouml;rn M&uuml;ller-Quade, Anderson C. A. Nascimento<br/>
 		IEEE Transactions on Information Theory, 2012<br/>
 	</span><br/>
@@ -284,8 +259,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2011/581.pdf">Standard Security Does Not 
-    	Imply Security Against Selective-Opening</a>&nbsp;&nbsp; 
-		<a href="./bibtex/EC-BDWY12.bib">BibTeX</a></b><br/>
+    	Imply Security Against Selective-Opening</a></b><br/>
 		with Mihir Bellare, Brent Waters, Scott Yilek<br/>
 		Eurocrypt 2012<br/>
 	</span><br/>
@@ -293,8 +267,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2008/138.pdf">Oblivious Transfer Based on 
-    	the McEliece Assumptions</a> &nbsp;&nbsp; 
-		<a href="./bibtex/IEICE-DGMN12.bib">BibTeX</a></b><br/>
+    	the McEliece Assumptions</a></b><br/>
 		with Jeroen van de Graaf, J&ouml;rn M&uuml;ller-Quade, Anderson C. A. Nascimento<br/>
 		IEICE Transactions on Fundamentals of Electronics, Communications and Computer Sciences, 2012 <br/>
 	</span><br/>
@@ -302,8 +275,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2009/570.pdf">Achieving Oblivious 
-    	Transfer Capacity of Generalized Erasure Channel in the Malicious Model</a>&nbsp;&nbsp; 
-		<a href="./bibtex/IEEEIT-PDMN11.bib">BibTeX</a></b><br/>
+    	Transfer Capacity of Generalized Erasure Channel in the Malicious Model</a></b><br/>
 		with Kirill Morozov, Anderson C. A. Nascimento, Adriana C. B. Pinto<br/>
 		IEEE Transactions on Information Theory, 2011<br/>
 	</span><br/>
@@ -311,8 +283,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/CCSW-BenDowSha11.pdf">Do You Know Where Your 
-    	Cloud Files Are?</a>&nbsp;&nbsp; 
-		<a href="./bibtex/CCSW-BenDowSha11.bib">BibTeX</a></b></br>
+    	Cloud Files Are?</a></b></br>
 		with Karyn Benson, Hovav Shacham<br/>
 		CCSW 2011<br/>
 	</span><br/>
@@ -320,8 +291,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="http://eprint.iacr.org/2009/273.pdf">Universally Composable 
-    	and Statistically Secure Verifiable Secret Sharing Scheme Based on Pre-Distributed Data</a>&nbsp;&nbsp;
-		<a href="./bibtex/IEICE-DMOHIN11.bib">BibTeX</a></b><br/>
+    	and Statistically Secure Verifiable Secret Sharing Scheme Based on Pre-Distributed Data</a></b><br/>
 		with Goichiro Hanaoka, Hideki Imai, J&ouml;rn M&uuml;ller-Quade, Anderson C. A. Nascimento, Akira Otsuka<br/>
         IEICE Transactions on Fundamentals of Electronics, Communications and Computer Sciences, 2011<br/>
     </span><br/>
@@ -329,8 +299,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/ISC-PDHN10.pdf">Public Key Encryption Schemes with Bounded CCA 
-    	Security and Optimal Ciphertext Length Based on the CDH Assumption</a>&nbsp;&nbsp;
-		<a href="./bibtex/ISC-PDHN10.bib">BibTeX</a></b><br/>
+    	Security and Optimal Ciphertext Length Based on the CDH Assumption</a></b><br/>
 		with Goichiro Hanaoka, Anderson C. A. Nascimento, Mayana Pereira<br/>
 		ISC 2010<br/>
 	</span><br/>
@@ -338,8 +307,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/WISA-DHIN10.pdf">Round-Optimal Deniable Ring Authentication 
-    	in the Presence of Big Brother</a> &nbsp;&nbsp;
-		<a href="./bibtex/WISA-DHIN10.bib">BibTeX</a></b><br/>
+    	in the Presence of Big Brother</a></b><br/>
 		with Goichiro Hanaoka, Hideki Imai, Anderson C. A. Nascimento<br/>
 		WISA 2010<br/>
 	</span><br/>
@@ -347,8 +315,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2010/289.pdf">A Two-Party Protocol with 
-    	Trusted Initializer for Computing the Inner Product</a> &nbsp;&nbsp;
-		<a href="./bibtex/WISA-DGMN10.bib">BibTeX</a></b><br/>
+    	Trusted Initializer for Computing the Inner Product</a></b><br/>
 		with Jeroen van de Graaf, Davidson Marques, Anderson C. A. Nascimento<br/>
 		WISA 2010<br/>
 	</span><br/>
@@ -356,8 +323,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2009/271.pdf">Reducing the Ciphertext Size 
-    	of Dolev-Dwork-Naor like Public Key Cryptosystems</a>&nbsp;&nbsp; 
-		<a href="./bibtex/SBSEG-DHIN10.bib">BibTeX</a></b><br/>
+    	of Dolev-Dwork-Naor like Public Key Cryptosystems</a></b><br/>
 		with Goichiro Hanaoka, Hideki Imai, Anderson C. A. Nascimento<br/>
 		SBSEG 2010<br/>
 	</span><br/>
@@ -365,8 +331,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/RSA-DowMulNas09.pdf">A CCA2 Secure Public Key Encryption 
-    	Scheme Based on the McEliece Assumptions in the Standard Model</a>&nbsp;&nbsp; 
-		<a href="./bibtex/RSA-DowMulNas09.bib">BibTeX</a></b><br/>
+    	Scheme Based on the McEliece Assumptions in the Standard Model</a></b><br/>
 		with J&ouml;rn M&uuml;ller-Quade, Anderson C. A. Nascimento<br/>
 		CT-RSA 2009<br/>
 	</span><br/>
@@ -374,8 +339,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/SBSEG-DMN08.pdf">On the Possibility of Universally Composable 
-    	Commitments Based on Noisy Channels</a>&nbsp;&nbsp; 
-		<a href="./bibtex/SBSEG-DMN08.bib">BibTeX</a></b><br/>
+    	Commitments Based on Noisy Channels</a></b><br/>
 		with J&ouml;rn M&uuml;ller-Quade, Anderson C. A. Nascimento<br/>
 		SBSEG 2008<br/>
 	</span><br/>
@@ -383,8 +347,7 @@
 
 <li>
     <span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/ICITS-DGMN08.pdf">Oblivious Transfer Based on the 
-    	McEliece Assumptions</a>&nbsp;&nbsp; 
-		<a href="./bibtex/ICITS-DGMN08.bib">BibTeX</a></b><br/>
+    	McEliece Assumptions</a></b><br/>
 		with Jeroen van de Graaf, J&ouml;rn M&uuml;ller-Quade, Anderson C. A. Nascimento<br/>
 		ICITS 2008<br/>
 	</span><br/>
