--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 </li>
 
 <li>
-	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/BD-FSDHCNT18.pdf">Privacy-preserving scoring of tree ensembles: A novel framework 
-		for AI in healthcare</a></b><br/>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/BD-FSDHCNT18.pdf">Privacy-preserving Scoring of Tree Ensembles: A Novel Framework 
+		for AI in Healthcare</a></b><br/>
 		with Martine De Cock, Kyle Fritchman, Tyler Hughes, Anderson C. A. Nascimento, 
 		Keerthanaa Saminathan, Ankur Teredesai<br/>
 		Special Session on HealthCare Data@Big Data 2018<br/>
