--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/IEEENSRE-ADMW+19.pdf">Protecting Privacy of Users in Brain-Computer 
 		Interface Applications</a></b><br/>
 		with Anisha Agarwal, Martine De Cock, Chin-Teng Lin, Nicholas D. McKinney, Anderson C. A. Nascimento, Dongrui Wu<br/>
-		To appear on IEEE Transactions on Neural Systems and Rehabilitation Engineering<br/>
+		IEEE Transactions on Neural Systems and Rehabilitation Engineering, 2019<br/>
 	</span><br/>
 </li>
 
