--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
 <h2>Papers </h2>
 <ul>
 
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2018/983.pdf">Efficient UC Commitment Extension 
+		with Homomorphism for Free (and Applications)</a></b><br/>
+		with Ignacio Cascudo, Ivan Damg&aring;rd, Bernardo David, Nico D&ouml;ttling, Irene Giacomelli<br/>
+		To appear at Asiacrypt 2019<br/>
+	</span><br/>
+</li>
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="./pdf/IEEENSRE-ADMW+19.pdf">Protecting Privacy of Users in Brain-Computer 
