--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
 <h2>Papers </h2>
 <ul>
 
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2019/744.pdf">Privacy-Preserving Classification of 
+		Personal Text Messages with Secure Multi-Party Computation</a></b><br/>
+		with Martine De Cock, Anderson C. A. Nascimento, Devin Reich, Ariel Todoki<br/>
+		To appear at NeurIPS 2019<br/>
+	</span><br/>
+</li>
+
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2018/983.pdf">Efficient UC Commitment Extension 
 		with Homomorphism for Free (and Applications)</a></b><br/>
