--- a/index.html
+++ b/index.html
@@ -27,10 +27,15 @@
 		My thesis is available <a href="./pdf/thesis.pdf">here.</a> 
 		
 <br/><br/>
+
+<b style="color:red">News:</b> <b>Our solution was the winner of IDASH Secure Genome Analysis Competition 2019 in Track IV: Secure Collaborative 
+Training of Machine Learning Model (joint work with Martine De Cock, Anderson C. A. Nascimento, 
+Davis Railsback, Jianwei Shen, Ariel Todoki)</b>
    
 
 <div style="height:1px;font-size:1px;">&nbsp;</div>
 <h2><a href="http://scholar.google.com/citations?user=6NdIS2AAAAAJ&hl=en" target="_blank">Google Scholar</a></h2>
+
 
 
 <div style="height:1px;font-size:1px;">&nbsp;</div>
