Adding Idash note

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		
 <br/><br/>
 
-<b style="color:red">News:</b> <b>Our solution was the winner of IDASH Secure Genome Analysis Competition 2019 in Track IV: Secure Collaborative 
+<b style="color:red">News:</b> <b>Our solution was the winner of the IDASH Secure Genome Analysis Competition 2019 in Track IV: Secure Collaborative 
 Training of Machine Learning Model (joint work with Martine De Cock, Anderson C. A. Nascimento, 
 Davis Railsback, Jianwei Shen, Ariel Todoki)</b>
    
