--- a/index.html
+++ b/index.html
@@ -44,10 +44,18 @@ Davis Railsback, Jianwei Shen, Ariel Todoki)</b>
 
 
 <li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2018/942.pdf">
+	Insured MPC: Efficient Secure Computation with Financial Penalties</a></b><br/>
+		with Carsten Baum, Bernardo David<br/>
+		To appear at Financial Cryptography and Data Security (FC) 2020<br/>
+	</span><br/>
+</li>
+
+<li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2019/744.pdf">Privacy-Preserving Classification of 
 		Personal Text Messages with Secure Multi-Party Computation</a></b><br/>
 		with Martine De Cock, Anderson C. A. Nascimento, Devin Reich, Ariel Todoki<br/>
-		To appear at NeurIPS 2019<br/>
+		NeurIPS 2019<br/>
 	</span><br/>
 </li>
 
@@ -55,7 +63,7 @@ Davis Railsback, Jianwei Shen, Ariel Todoki)</b>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2018/983.pdf">Efficient UC Commitment Extension 
 		with Homomorphism for Free (and Applications)</a></b><br/>
 		with Ignacio Cascudo, Ivan Damg&aring;rd, Bernardo David, Nico D&ouml;ttling, Irene Giacomelli<br/>
-		To appear at Asiacrypt 2019<br/>
+		Asiacrypt 2019<br/>
 	</span><br/>
 </li>
 
