--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@ Davis Railsback, Jianwei Shen, Ariel Todoki)</b>
 <h2>Papers </h2>
 <ul>
 
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://arxiv.org/pdf/1808.10145.pdf">
+	On the Composability of Statistically Secure Random Oblivious Transfer</a></b><br/>
+		with J&ouml;rn M&uuml;ller-Quade, Anderson C. A. Nascimento<br/>
+		To appear at Entropy<br/>
+	</span><br/>
+</li>
+
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2018/942.pdf">
