--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@ Davis Railsback, Jianwei Shen, Ariel Todoki)</b>
 <ul>
 
 <li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2019/572.pdf">
+	On the Commitment Capacity of Unfair Noisy Channels</a></b><br/>
+		with Claude Cr&eacute;peau, Anderson C. A. Nascimento<br/>
+		To appear at Entropy<br/>
+	</span><br/>
+</li>
+
+<li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://arxiv.org/pdf/1808.10145.pdf">
 	On the Composability of Statistically Secure Random Oblivious Transfer</a></b><br/>
 		with J&ouml;rn M&uuml;ller-Quade, Anderson C. A. Nascimento<br/>
