--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Davis Railsback, Jianwei Shen, Ariel Todoki)</b>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2019/572.pdf">
 	On the Commitment Capacity of Unfair Noisy Channels</a></b><br/>
 		with Claude Cr&eacute;peau, Anderson C. A. Nascimento<br/>
-		To appear at Entropy<br/>
+		To appear at IEEE Transactions on Information Theory<br/>
 	</span><br/>
 </li>
 
