--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
 		<img class="imgright" src="01.jpg" width= 150 px height= 210 px>
 		<h1>Rafael Dowsley</h1>
 		<br/>
-		E-mail: rafael (at) dowsley (dot) net <br/><br/>
+		E-mail: rafael (dot) dowsley (at) monash (dot) edu <br/><br/>
 		
 		<h2> About me </h2>
 		
-		I am a postdoctoral researcher in the <a href="https://cyber.biu.ac.il">Center for Research in 
-		Applied Cryptography and Cyber Security</a> at the Bar-Ilan University. My research interests lie 
-		in cryptography and its many intersections with machine learning, information theory and privacy.
-		Previously I was a postdoctoral researcher in the <a href="http://users-cs.au.dk/orlandi/cryptogroup/">Cryptography 
-		and Security Research Group</a> at the Aarhus University and got my doctoral degree 
+		I am a Lecturer (~US Assistant Professor) in the <a href="https://www.monash.edu/it/ssc">
+		Department of Software Systems and Cybersecurity</a> 
+		of the <a href="https://www.monash.edu/it">Faculty of Information Technology</a> at Monash University. My research focuses on cryptography and 
+		its abundant intersections with fields such as machine learning, security, privacy and information theory. 
+		I have a keen interest on the design of cryptographic protocols to enhance privacy and some of my current 
+		investigations are into privacy-preserving machine learning, cryptocurrencies and blockchain technologies.
+		
+		Previously I was a postdoctoral researcher in the <a href="https://cyber.biu.ac.il">Center for Research in 
+		Applied Cryptography and Cyber Security</a> at the Bar-Ilan University and in the <a href="http://users-cs.au.dk/orlandi/cryptogroup/">Cryptography 
+		and Security Research Group</a> at the Aarhus University, and I got my doctoral degree 
 		from the Karlsruhe Institute of Technology, where I worked in 
 		the <a href="http://crypto.iti.kit.edu">Cryptography and Security Working Group</a> under 
 		<a href="http://crypto.iti.kit.edu/index.php?id=mueller-quade&L=0">Professor J&ouml;rn M&uuml;ller-Quade</a>. 
