--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		
 		Previously I was a postdoctoral researcher in the <a href="https://cyber.biu.ac.il">Center for Research in 
 		Applied Cryptography and Cyber Security</a> at the Bar-Ilan University and in the <a href="http://users-cs.au.dk/orlandi/cryptogroup/">Cryptography 
-		and Security Research Group</a> at the Aarhus University, and I got my doctoral degree 
+		and Security Research Group</a> at the Aarhus University. I got my doctoral degree 
 		from the Karlsruhe Institute of Technology, where I worked in 
 		the <a href="http://crypto.iti.kit.edu">Cryptography and Security Working Group</a> under 
 		<a href="http://crypto.iti.kit.edu/index.php?id=mueller-quade&L=0">Professor J&ouml;rn M&uuml;ller-Quade</a>. 
