--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 		Applied Cryptography and Cyber Security</a> at the Bar-Ilan University and in the <a href="http://users-cs.au.dk/orlandi/cryptogroup/">Cryptography 
 		and Security Research Group</a> at the Aarhus University. I got my doctoral degree 
 		from the Karlsruhe Institute of Technology, where I worked in 
-		the <a href="http://crypto.iti.kit.edu">Cryptography and Security Working Group</a> under 
-		<a href="http://crypto.iti.kit.edu/index.php?id=mueller-quade&L=0">Professor J&ouml;rn M&uuml;ller-Quade</a>. 
+		the <a href="http://crypto.iti.kit.edu/english/index.php">Cryptography and Security Working Group</a>. 
 		My thesis is available <a href="./pdf/thesis.pdf">here.</a> 
 		
 <br/><br/>
@@ -52,7 +51,15 @@ Davis Railsback, Jianwei Shen, Ariel Todoki)</b>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2019/572.pdf">
 	On the Commitment Capacity of Unfair Noisy Channels</a></b><br/>
 		with Claude Cr&eacute;peau, Anderson C. A. Nascimento<br/>
-		To appear at IEEE Transactions on Information Theory<br/>
+		IEEE Transactions on Information Theory, 2020<br/>
+	</span><br/>
+</li>
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2018/942.pdf">
+	Insured MPC: Efficient Secure Computation with Financial Penalties</a></b><br/>
+		with Carsten Baum, Bernardo David<br/>
+		Financial Cryptography and Data Security (FC) 2020<br/>
 	</span><br/>
 </li>
 
@@ -60,18 +67,10 @@ Davis Railsback, Jianwei Shen, Ariel Todoki)</b>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://arxiv.org/pdf/1808.10145.pdf">
 	On the Composability of Statistically Secure Random Oblivious Transfer</a></b><br/>
 		with J&ouml;rn M&uuml;ller-Quade, Anderson C. A. Nascimento<br/>
-		To appear at Entropy<br/>
+		Entropy, 2020<br/>
 	</span><br/>
 </li>
 
-
-<li>
-	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2018/942.pdf">
-	Insured MPC: Efficient Secure Computation with Financial Penalties</a></b><br/>
-		with Carsten Baum, Bernardo David<br/>
-		To appear at Financial Cryptography and Data Security (FC) 2020<br/>
-	</span><br/>
-</li>
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2019/744.pdf">Privacy-Preserving Classification of 
