--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		Applied Cryptography and Cyber Security</a> at Bar-Ilan University and in the <a href="http://users-cs.au.dk/orlandi/cryptogroup/">Cryptography 
 		and Security Research Group</a> at Aarhus University. I got my doctoral degree 
 		from the Karlsruhe Institute of Technology, where I worked in 
-		the <a href="http://crypto.iti.kit.edu/english/index.php">Cryptography and Security Working Group</a>. 
+		the <a href="http://crypto.iti.kit.edu/english/index.php">Cryptography and Security Group</a>. 
 		My thesis is available <a href="./pdf/thesis.pdf">here.</a> 
 		
 <br/><br/>
