--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		
 		<h2> About me </h2>
 		
-		I am a Lecturer (~US Assistant Professor) in the <a href="https://www.monash.edu/it/ssc">
+		I am a Lecturer (Australian equivalent to Assistant Professor in North America) in the <a href="https://www.monash.edu/it/ssc">
 		Department of Software Systems and Cybersecurity</a> 
 		of the <a href="https://www.monash.edu/it">Faculty of Information Technology</a> at Monash University. My research focuses on cryptography and 
 		its abundant intersections with fields such as machine learning, security, privacy and information theory. 
