--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@ Davis Railsback, Jianwei Shen, Ariel Todoki)</b>
 <h2>Papers </h2>
 <ul>
 
+
+
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b>
+	Efficient Composable Oblivious Transfer from CDH in the Global Random Oracle Model</b><br/>
+		with Bernardo David<br/>
+		To appear at CANS 2020<br/>
+	</span><br/>
+</li>
+
+
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2019/572.pdf">
 	On the Commitment Capacity of Unfair Noisy Channels</a></b><br/>
