--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ Davis Railsback, Jianwei Shen, Ariel Todoki)</b>
 
 
 <li>
-	<span lang="EN-US" xml:lang="EN-US"><b>
-	Efficient Composable Oblivious Transfer from CDH in the Global Random Oracle Model</b><br/>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/1291.pdf">
+	Efficient Composable Oblivious Transfer from CDH in the Global Random Oracle Model</a></b><br/>
 		with Bernardo David<br/>
 		To appear at CANS 2020<br/>
 	</span><br/>
