--- a/index.html
+++ b/index.html
@@ -48,13 +48,19 @@ Davis Railsback, Jianwei Shen, Ariel Todoki)</b>
 <ul>
 
 
-
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://arxiv.org/pdf/2002.05377.pdf">
+	High Performance Logistic Regression for Privacy-Preserving Genome Analysis</a></b><br/>
+		with Martine De Cock, Anderson C. A. Nascimento, Davis Railsback, Jianwei Shen, Ariel Todoki<br/>
+		To appear at BMC Medical Genomics<br/>
+	</span><br/>
+</li>
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/1291.pdf">
 	Efficient Composable Oblivious Transfer from CDH in the Global Random Oracle Model</a></b><br/>
 		with Bernardo David<br/>
-		To appear at CANS 2020<br/>
+		CANS 2020<br/>
 	</span><br/>
 </li>
 
