--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Davis Railsback, Jianwei Shen, Ariel Todoki)</b>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://arxiv.org/pdf/2002.05377.pdf">
 	High Performance Logistic Regression for Privacy-Preserving Genome Analysis</a></b><br/>
 		with Martine De Cock, Anderson C. A. Nascimento, Davis Railsback, Jianwei Shen, Ariel Todoki<br/>
-		To appear at BMC Medical Genomics<br/>
+		BMC Medical Genomics, 2021<br/>
 	</span><br/>
 </li>
 
