--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@ Davis Railsback, Jianwei Shen, Ariel Todoki)</b>
 <h2>Papers </h2>
 <ul>
 
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/537.pdf">
+	A Foundation of Time-Lock Puzzles in UC</a></b><br/>
+		with Carsten Baum, Bernardo David, Jesper Buus Nielsen, Sabine Oechsner<br/>
+		To appear at Eurocrypt 2021<br/>
+	</span><br/>
+</li>
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://arxiv.org/pdf/2002.05377.pdf">
