--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
 		
 <br/><br/>
 
-<b style="color:red">News:</b> <b>Our solution was the winner of the IDASH Secure Genome Analysis Competition 2019 in Track IV: Secure Collaborative 
-Training of Machine Learning Model (joint work with Martine De Cock, Anderson C. A. Nascimento, 
-Davis Railsback, Jianwei Shen, Ariel Todoki)</b>
-   
+
 
 <div style="height:1px;font-size:1px;">&nbsp;</div>
 <h2><a href="http://scholar.google.com/citations?user=6NdIS2AAAAAJ&hl=en" target="_blank">Google Scholar</a></h2>
@@ -60,6 +57,8 @@ Davis Railsback, Jianwei Shen, Ariel Todoki)</b>
 	High Performance Logistic Regression for Privacy-Preserving Genome Analysis</a></b><br/>
 		with Martine De Cock, Anderson C. A. Nascimento, Davis Railsback, Jianwei Shen, Ariel Todoki<br/>
 		BMC Medical Genomics, 2021<br/>
+		<b style="color:red">Winner of the IDASH Secure Genome Analysis Competition 2019 in Track IV: Secure Collaborative 
+Training of Machine Learning Model</b><br/>
 	</span><br/>
 </li>
 
