--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 	High Performance Logistic Regression for Privacy-Preserving Genome Analysis</a></b><br/>
 		with Martine De Cock, Anderson C. A. Nascimento, Davis Railsback, Jianwei Shen, Ariel Todoki<br/>
 		BMC Medical Genomics, 2021<br/>
-		<b style="color:red">Winner of the IDASH Secure Genome Analysis Competition 2019 in Track IV: Secure Collaborative 
-Training of Machine Learning Model</b><br/>
+		<b style="color:red">Winner of the IDASH Secure Genome Analysis Competition 2019</b><br/>
 	</span><br/>
 </li>
 
