--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
 </li>
 
 <li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://arxiv.org/pdf/2007.00253.pdf">
+	Private Speech Classification with Secure Multiparty Computation</a></b><br/>
+		with Kyle Bittner, Martine De Cock<br/>
+		To appear at Neural Networks<br/>
+	</span><br/>
+</li>
+
+<li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://arxiv.org/pdf/2002.05377.pdf">
 	High Performance Logistic Regression for Privacy-Preserving Genome Analysis</a></b><br/>
 		with Martine De Cock, Anderson C. A. Nascimento, Davis Railsback, Jianwei Shen, Ariel Todoki<br/>
