--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/537.pdf">
-	A Foundation of Time-Lock Puzzles in UC</a></b><br/>
+	TARDIS: A Foundation of Time-Lock Puzzles in UC</a></b><br/>
 		with Carsten Baum, Bernardo David, Jesper Buus Nielsen, Sabine Oechsner<br/>
 		To appear at Eurocrypt 2021<br/>
 	</span><br/>
