--- a/index.html
+++ b/index.html
@@ -45,6 +45,22 @@
 <ul>
 
 <li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://arxiv.org/pdf/2102.03513.pdf">
+	Privacy-Preserving Video Classification with Convolutional Neural Networks</a></b><br/>
+		with Martine De Cock, Sikha Pentyala<br/>
+		To appear at ICML 2021<br/>
+	</span><br/>
+</li>
+
+<li>
+	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://arxiv.org/pdf/2102.03517.pdf">
+	Privacy-Preserving Feature Selection with Secure Multiparty Computation</a></b><br/>
+		with Martine De Cock, Xiling Li<br/>
+		To appear at ICML 2021<br/>
+	</span><br/>
+</li>
+
+<li>
 	<span lang="EN-US" xml:lang="EN-US"><b><a href="https://eprint.iacr.org/2020/537.pdf">
 	TARDIS: A Foundation of Time-Lock Puzzles in UC</a></b><br/>
 		with Carsten Baum, Bernardo David, Jesper Buus Nielsen, Sabine Oechsner<br/>
